画面レイアウト完了

--- a/index.html
+++ b/index.html
@@ -10,11 +10,58 @@
     <title>RemindCommandGenelator</title>
 </head>
 <body>
+    <div id="app" class="appmain">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">RemindCommandGenelator</h4>
+                <h6 class="card-subtitle mb-2 text-muted">remindコマンドを生成します。</h6>
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="form-group row">
+                        <label for="channnel" class="col-sm-2 col-form-label">通知対象（人・チャンネル）</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="channnel" placeholder="通知対象">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="messege" class="col-sm-2 col-form-label">メッセージ</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" id="messege" placeholder="メッセージ"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="channnel" class="col-sm-2 col-form-label">日時</label>
+                        <div class="col-sm-10">
+                            <select class="custom-select">
+                                <option selected="">通知日時</option>
+                                <option value="now">すぐ</option>
+                                <option value="tomorrow">明日</option>
+                                <option value="everyday">毎日</option>
+                                <option value="every weekday">平日</option>
+                                <!-- <option value=""></option> -->
+                                <!-- <option value=""></option> -->
+                                <!-- <option value=""></option> -->
+                                <option value="custom">日時指定</option>
+                            </select>
+                            <input type="text" class="form-control" id="channnel" placeholder="日時指定">
+                        </div>                       
+                    </div>
+                    <div class="form-group row">
+                        <!-- <div class="col-sm-10"> -->
+                            <!-- <button type="submit" class="btn btn-primary">Sign in</button> -->
+                            <input class="form-control" type="text" placeholder="Readonly input here…" readonly="">
+                        <!-- </div> -->
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="./app.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
