--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <div class="card-body">
                 <form>
                     <div class="form-group row">
-                        <label for="channnel" class="col-sm-2 col-form-label">通知対象（人・チャンネル）</label>
+                        <label for="sendtarget" class="col-sm-2 col-form-label">通知対象（人・チャンネル）</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="channnel" placeholder="通知対象">
+                            <input type="text" class="form-control" id="sendtarget" v-model="sendtarget" placeholder="通知対象" required>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="messege" class="col-sm-2 col-form-label">メッセージ</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="messege" placeholder="メッセージ"></textarea>
+                            <input type="text" class="form-control" id="messege" v-model="messege" placeholder="メッセージ" required>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="channnel" class="col-sm-2 col-form-label">日時</label>
+                        <label for="datetime" class="col-sm-2 col-form-label">日時</label>
                         <div class="col-sm-10">
-                            <select class="custom-select">
-                                <option selected="">通知日時</option>
+                            <select class="custom-select" v-model="datetime1">
+                                <option value="default" selected="">通知日時</option>
                                 <option value="now">すぐ</option>
                                 <option value="tomorrow">明日</option>
                                 <option value="everyday">毎日</option>
@@ -44,13 +44,13 @@
                                 <!-- <option value=""></option> -->
                                 <option value="custom">日時指定</option>
                             </select>
-                            <input type="text" class="form-control" id="channnel" placeholder="日時指定">
+                            <input type="text" class="form-control" id="datetime" v-model="datetime2" v-bind:disabled="selectedcustom" placeholder="日時指定">
                         </div>                       
                     </div>
                     <div class="form-group row">
                         <!-- <div class="col-sm-10"> -->
                             <!-- <button type="submit" class="btn btn-primary">Sign in</button> -->
-                            <input class="form-control" type="text" placeholder="Readonly input here…" readonly="">
+                            <input class="form-control" type="text" v-model="command" placeholder="Readonly input here…" readonly="">
                         <!-- </div> -->
                     </div>
                 </form>
@@ -62,6 +62,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- 本番バージョン、サイズと速度のために最適化されています -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
