--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="card-body">
                 <form>
                     <div class="form-group row">
-                        <label for="sendtarget" class="col-sm-2 col-form-label">通知対象（人・チャンネル）</label>
+                        <label for="sendtarget" class="col-sm-2 col-form-label">通知対象</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="sendtarget" v-model="sendtarget" placeholder="通知対象">
                         </div>
@@ -50,7 +50,7 @@
                     <div class="form-group row">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <button type="button" class="btn btn-secondary" v-on:click="copyToClipboard">
+                                <button type="button" class="btn btn-light" v-on:click="copyToClipboard">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
                                         <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"></path>
                                         <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"></path>
