--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                     <div class="form-group row">
                         <label for="sendtarget" class="col-sm-2 col-form-label">通知対象</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="sendtarget" v-model="sendtarget" placeholder="通知対象">
+                            <select class="form-control" v-model="sendtarget1">
+                                <option value="default" selected="">通知対象</option>
+                                <option value="me">自分に</option>
+                                <option value="everyone">generalに</option>
+                                <option value="channel">チャンネル全員に</option>
+                                <option value="here">アクティブメンバー全員に</option>
+                                <option value="custom">指定する</option>
+                            </select>
+                            <input type="text" class="form-control" id="sendtarget" v-model="sendtarget2" v-bind:disabled="selected_sendtarget_custom" placeholder="宛先指定">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -44,7 +52,7 @@
                                 <!-- <option value=""></option> -->
                                 <option value="custom">日時指定</option>
                             </select>
-                            <input type="text" class="form-control" id="datetime" v-model="datetime2" v-bind:disabled="selectedcustom" placeholder="日時指定">
+                            <input type="text" class="form-control" id="datetime" v-model="datetime2" v-bind:disabled="selected_datetime_custom" placeholder="日時指定">
                         </div>                       
                     </div>
                     <div class="form-group row">
