--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <title>Slack remind command generate | スラック リマインド コマンド 自動生成</title>
+    <title>Slack remind command generator | スラック リマインド コマンド 自動生成</title>
 </head>
 <body>
     <div id="app" class="appmain">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Slack Remind Command Genelation</h4>
+                <h4 class="card-title">Slack Remind Command Genelatior</h4>
                 <h6 class="card-subtitle mb-2 text-muted">slackのremindコマンドを生成します。</h6>
             </div>
             <div class="card-body">
@@ -53,7 +53,7 @@
                                 <option value="custom">日時指定</option>
                             </select>
                             <input type="text" class="form-control" id="datetime" v-model="datetime2" v-bind:disabled="selected_datetime_custom" placeholder="日時指定">
-                        </div>                       
+                        </div>
                     </div>
                     <div class="form-group row">
                         <div class="input-group">
