--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">時</span>
                                 </div>
-                                <input type="number" class="form-control" id="datetime_month" v-model="datetime_hour" min="1" max="60" v-bind:disabled="selected_time_custom" placeholder="月">
+                                <input type="number" class="form-control" id="datetime_month" v-model="datetime_hour" min="1" max="60" v-bind:disabled="selected_time_custom" placeholder="時">
                             </div>                              
                             <div class="input-group" v-show="is_show_date_custom">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">分</span>
                                 </div>
-                                <input type="number" class="form-control" id="datetime_day" v-model="datetime_minute" min="1" max="60" v-bind:disabled="selected_time_custom" placeholder="日">
+                                <input type="number" class="form-control" id="datetime_day" v-model="datetime_minute" min="1" max="60" v-bind:disabled="selected_time_custom" placeholder="分">
                             </div>                              
                         </div>
                     </div>
