毎月指定時に日を変更できるようにする

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <span class="input-group-text dateTime_label">日</span>
                                 </div>
                                 <input type="number" class="form-control" id="dateTime_day" v-model="dateTime_day"
-                                    min="1" max="31" v-bind:disabled="selectedDateCustom" placeholder="日">
+                                    min="1" max="31" v-bind:disabled="selectedDayCustom" placeholder="日">
                             </div>
                             <div class="input-group" v-show="isShowDateCustom">
                                 <div class="input-group-prepend">
